--- a/Clementine_Ag_W_A_S_P_Setup.ipynb
+++ b/Clementine_Ag_W_A_S_P_Setup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGfXN29x0+lrILarhy6b66",
+      "authorship_tag": "ABX9TyNqn5lF0Cs6FVuL8z6yzWq0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -274,10 +274,22 @@
         "!pip install numpy==1.23.5"
       ],
       "metadata": {
-        "id": "41OIb71lhFUn"
+        "id": "41OIb71lhFUn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ba3c5705-a79e-4761-89ed-11773ad68255"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: numpy==1.23.5 in /usr/local/lib/python3.11/dist-packages (1.23.5)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -364,7 +376,7 @@
         "id": "b2ifvGjwL2UN",
         "outputId": "082522c7-103c-4ac2-a507-f59d7d1950bc"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -824,13 +836,13 @@
         "from google.colab import files\n",
         "\n",
         "# Load CSV\n",
-        "csv_filename = \"/content/mlp_training_data_long.csv\"\n",
+        "csv_filename = \"/content/mlp_training_data_flat_cleaned.csv\"\n",
         "df = pd.read_csv(csv_filename, header=None)\n",
-        "df.columns = [\"angle_0\", \"angle_1\", \"depth\", \"center_x\", \"center_y\", \"tiltx\", \"tilty\"]\n",
+        "df.columns = [\"angle_0\", \"angle_1\", \"depth\", \"center_x\", \"center_y\", \"tilt_x\", \"tilt_y\"]\n",
         "\n",
         "# Features and targets\n",
         "y = df[[\"angle_0\", \"angle_1\"]].values\n",
-        "x = df[[\"center_x\", \"center_y\", \"depth\"]].values\n",
+        "x = df[[\"center_x\", \"center_y\", \"depth\", \"tilt_x\", \"tilt_y\"]].values\n",
         "\n",
         "# Train/test split\n",
         "X_train, X_val, y_train, y_val = train_test_split(x, y, test_size=0.2, random_state=42)\n",
@@ -841,7 +853,7 @@
         "tree.fit(X_train, y_train)\n",
         "\n",
         "# Save the decision tree model\n",
-        "tree_model_path = \"/content/decision_tree_long.pkl\"\n",
+        "tree_model_path = \"/content/decision_tree_flat_fine2.pkl\"\n",
         "with open(tree_model_path, 'wb') as f:\n",
         "    pickle.dump(tree, f)\n",
         "\n",
@@ -875,7 +887,7 @@
         "rf.fit(X_train, y_train)\n",
         "\n",
         "# Save the Random Forest model\n",
-        "rf_model_path = \"/content/random_forest_long.pkl\"\n",
+        "rf_model_path = \"/content/random_forest_flat_fine2.pkl\"\n",
         "with open(rf_model_path, 'wb') as f:\n",
         "    pickle.dump(rf, f)\n",
         "\n",
@@ -904,10 +916,198 @@
         "\n"
       ],
       "metadata": {
-        "id": "uriUGi1lGPdn"
+        "id": "uriUGi1lGPdn",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 642
+        },
+        "outputId": "b7640cf1-a6c5-44b2-a207-154f153884de"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Decision tree trained and saved to /content/decision_tree_flat_fine2.pkl\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_043548e2-4c57-414a-b900-6869f58e84c4\", \"decision_tree_flat_fine2.pkl\", 5889007)"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Decision Tree Validation MAE:\n",
+            "  angle_0: 1.03 degrees\n",
+            "  angle_1: 0.17 degrees\n",
+            "  Average MAE: 0.60 degrees\n",
+            "\n",
+            "Sample Predictions vs Actual Values for Decision Tree:\n",
+            "[0] Predicted: angle_0 = 59.00, angle_1 = 28.60  |  Actual: angle_0 = 59.20, angle_1 = 28.60\n",
+            "[1] Predicted: angle_0 = 28.60, angle_1 = 41.60  |  Actual: angle_0 = 28.60, angle_1 = 41.20\n",
+            "[2] Predicted: angle_0 = 48.80, angle_1 = 25.80  |  Actual: angle_0 = 46.80, angle_1 = 26.40\n",
+            "[3] Predicted: angle_0 = 51.40, angle_1 = 27.20  |  Actual: angle_0 = 52.00, angle_1 = 26.80\n",
+            "[4] Predicted: angle_0 = 59.60, angle_1 = 31.40  |  Actual: angle_0 = 59.80, angle_1 = 31.40\n",
+            "[5] Predicted: angle_0 = 49.60, angle_1 = 51.00  |  Actual: angle_0 = 49.40, angle_1 = 51.00\n",
+            "[6] Predicted: angle_0 = 74.20, angle_1 = 35.40  |  Actual: angle_0 = 74.00, angle_1 = 35.40\n",
+            "[7] Predicted: angle_0 = 28.40, angle_1 = 50.00  |  Actual: angle_0 = 28.20, angle_1 = 50.00\n",
+            "[8] Predicted: angle_0 = 51.80, angle_1 = 29.00  |  Actual: angle_0 = 51.80, angle_1 = 28.20\n",
+            "[9] Predicted: angle_0 = 32.60, angle_1 = 47.00  |  Actual: angle_0 = 30.80, angle_1 = 46.80\n",
+            "Random Forest trained and saved to /content/random_forest_flat_fine2.pkl\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_b580c1ec-169e-400b-a095-f03f857cf408\", \"random_forest_flat_fine2.pkl\", 372675891)"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Random Forest Validation MAE:\n",
+            "  angle_0: 0.92 degrees\n",
+            "  angle_1: 0.13 degrees\n",
+            "  Average MAE: 0.52 degrees\n",
+            "\n",
+            "Sample Predictions vs Actual Values for Random Forest:\n",
+            "[0] Predicted: angle_0 = 57.99, angle_1 = 28.70  |  Actual: angle_0 = 59.20, angle_1 = 28.60\n",
+            "[1] Predicted: angle_0 = 28.70, angle_1 = 41.39  |  Actual: angle_0 = 28.60, angle_1 = 41.20\n",
+            "[2] Predicted: angle_0 = 48.98, angle_1 = 26.24  |  Actual: angle_0 = 46.80, angle_1 = 26.40\n",
+            "[3] Predicted: angle_0 = 52.68, angle_1 = 26.78  |  Actual: angle_0 = 52.00, angle_1 = 26.80\n",
+            "[4] Predicted: angle_0 = 59.51, angle_1 = 31.31  |  Actual: angle_0 = 59.80, angle_1 = 31.40\n",
+            "[5] Predicted: angle_0 = 48.73, angle_1 = 51.05  |  Actual: angle_0 = 49.40, angle_1 = 51.00\n",
+            "[6] Predicted: angle_0 = 73.95, angle_1 = 35.54  |  Actual: angle_0 = 74.00, angle_1 = 35.40\n",
+            "[7] Predicted: angle_0 = 28.52, angle_1 = 50.05  |  Actual: angle_0 = 28.20, angle_1 = 50.00\n",
+            "[8] Predicted: angle_0 = 51.42, angle_1 = 28.23  |  Actual: angle_0 = 51.80, angle_1 = 28.20\n",
+            "[9] Predicted: angle_0 = 32.36, angle_1 = 46.90  |  Actual: angle_0 = 30.80, angle_1 = 46.80\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -933,7 +1133,7 @@
         "import pandas as pd\n",
         "\n",
         "# Path to your original CSV file\n",
-        "input_csv = \"/content/mlp_training_data_flat.csv\"\n",
+        "input_csv = \"/content/mlp_training_data_fine_flat.csv\"\n",
         "\n",
         "# Output path for cleaned CSV\n",
         "output_csv = \"/content/mlp_training_data_flat_cleaned.csv\"\n",
@@ -954,10 +1154,23 @@
         "print(f\"Original rows: {len(df)}, Cleaned rows: {len(df_cleaned)}\")"
       ],
       "metadata": {
-        "id": "hJaYMFhgUNQ8"
+        "id": "hJaYMFhgUNQ8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d5a58c98-a34f-40ef-8db1-9166ecda0fc8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cleaned dataset saved to: /content/mlp_training_data_flat_cleaned.csv\n",
+            "Original rows: 46129, Cleaned rows: 46078\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
