--- a/Clementine_Ag_W_A_S_P_Setup.ipynb
+++ b/Clementine_Ag_W_A_S_P_Setup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNqn5lF0Cs6FVuL8z6yzWq0",
+      "authorship_tag": "ABX9TyMHvdyxa8XwTQ8tYZhys8+F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -280,7 +280,7 @@
         },
         "outputId": "ba3c5705-a79e-4761-89ed-11773ad68255"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -923,7 +923,7 @@
         },
         "outputId": "b7640cf1-a6c5-44b2-a207-154f153884de"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1160,7 +1160,7 @@
         },
         "outputId": "d5a58c98-a34f-40ef-8db1-9166ecda0fc8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1232,7 +1232,7 @@
         "import cv2\n",
         "import depthai as dai\n",
         "import torch\n",
-        "from collections import defaultdict\n",
+        "from collections import defaultdict, deque\n",
         "import numpy as np\n",
         "from ultralytics import YOLO\n",
         "import joblib\n",
@@ -1241,13 +1241,57 @@
         "import logging\n",
         "import threading\n",
         "import queue\n",
+        "import math\n",
         "\n",
-        "# Load the YOLO model (TensorRT format)\n",
+        "# Load the YOLO model\n",
         "model = YOLO(\"toolbar_test3.engine\")\n",
         "\n",
         "# Load Random Forest models\n",
-        "rf_model_long = joblib.load(\"random_forest_long.pkl\")\n",
-        "rf_model_flat = joblib.load(\"random_forest_flat.pkl\")\n",
+        "rf_model_long = joblib.load(\"random_forest_long_fine2.pkl\")\n",
+        "rf_model_flat = joblib.load(\"random_forest_flat_fine2.pkl\")\n",
+        "\n",
+        "class KalmanFilter:\n",
+        "    def __init__(self):\n",
+        "        # Define the Kalman filter\n",
+        "        self.dt = 1.0\n",
+        "\n",
+        "        self.A = np.array([[1, 0, self.dt, 0],\n",
+        "                           [0, 1, 0, self.dt],\n",
+        "                           [0, 0, 1, 0],\n",
+        "                           [0, 0, 0, 1]])\n",
+        "\n",
+        "        self.B = np.array([[0],\n",
+        "                           [0],\n",
+        "                           [0],\n",
+        "                           [0]])\n",
+        "\n",
+        "        self.H = np.array([[1, 0, 0, 0],\n",
+        "                           [0, 1, 0, 0]])\n",
+        "\n",
+        "        self.Q = np.eye(4) * 0.1\n",
+        "        self.R = np.eye(2) * 10\n",
+        "        self.P = np.eye(4)\n",
+        "        self.x = np.zeros((4, 1))\n",
+        "        self.u = 0\n",
+        "\n",
+        "    def predict(self, coordX, coordY):\n",
+        "        measured = np.array([[np.float32(coordX)], [np.float32(coordY)]])\n",
+        "        self.x = self.A @ self.x + self.B * self.u\n",
+        "        self.P = self.A @ self.P @ self.A.T + self.Q\n",
+        "\n",
+        "        S = self.H @ self.P @ self.H.T + self.R\n",
+        "        K = self.P @ self.H.T @ np.linalg.inv(S)\n",
+        "        y = measured - self.H @ self.x\n",
+        "        self.x += K @ y\n",
+        "        self.P = (np.eye(4) - K @ self.H) @ self.P\n",
+        "        return int(self.x[0][0]), int(self.x[1][0])\n",
+        "\n",
+        "    def predict_future(self, steps=5):\n",
+        "        future_x = self.x.copy()\n",
+        "        for _ in range(steps):\n",
+        "            future_x = self.A @ future_x + self.B * self.u\n",
+        "        return int(future_x[0][0]), int(future_x[1][0])\n",
+        "\n",
         "\n",
         "# Constants for PCA9685\n",
         "PCA9685_ADDRESS = 0x40\n",
@@ -1257,6 +1301,7 @@
         "\n",
         "# I2C initialization\n",
         "bus = SMBus(7)\n",
+        "\n",
         "def init_pca9685():\n",
         "    bus.write_byte_data(PCA9685_ADDRESS, MODE1, 0x00)\n",
         "    bus.write_byte_data(PCA9685_ADDRESS, MODE2, 0x04)\n",
@@ -1274,6 +1319,12 @@
         "def angle_to_pulse_width(angle, min_us=500, max_us=2500):\n",
         "    return int((angle / 180.0) * (max_us - min_us) + min_us)\n",
         "\n",
+        "# Calculate tilt from accelerometer data\n",
+        "def calculate_tilt(accel_x, accel_y, accel_z):\n",
+        "    tilt_x = math.atan2(accel_x, math.sqrt(accel_y**2 + accel_z**2))  # Pitch\n",
+        "    tilt_y = math.atan2(accel_y, math.sqrt(accel_x**2 + accel_z**2))  # Roll\n",
+        "    return math.degrees(tilt_x), math.degrees(tilt_y)  # Convert radians to degrees\n",
+        "\n",
         "def control_diode(on=True):\n",
         "    pulse_width = int((0.1 / 100.0) * 4095)\n",
         "    set_pwm(13, pulse_width if on else 0)\n",
@@ -1281,12 +1332,12 @@
         "\n",
         "init_pca9685()\n",
         "\n",
-        "# Setup OAK-D Lite pipeline\n",
+        "# OAK-D Lite pipeline setup\n",
         "pipeline = dai.Pipeline()\n",
         "cam_rgb = pipeline.create(dai.node.ColorCamera)\n",
         "cam_rgb.setPreviewSize(640, 360)\n",
         "cam_rgb.setBoardSocket(dai.CameraBoardSocket.CAM_A)\n",
-        "cam_rgb.setResolution(dai.ColorCameraProperties.SensorResolution.THE_720_P)\n",
+        "cam_rgb.setResolution(dai.ColorCameraProperties.SensorResolution.THE_1080_P)\n",
         "cam_rgb.setInterleaved(False)\n",
         "cam_rgb.setColorOrder(dai.ColorCameraProperties.ColorOrder.BGR)\n",
         "cam_rgb.setFps(30)\n",
@@ -1299,9 +1350,17 @@
         "mono_right.setResolution(dai.MonoCameraProperties.SensorResolution.THE_480_P)\n",
         "\n",
         "stereo = pipeline.create(dai.node.StereoDepth)\n",
-        "stereo.setDefaultProfilePreset(dai.node.StereoDepth.PresetMode.HIGH_ACCURACY)\n",
+        "stereo.setDefaultProfilePreset(dai.node.StereoDepth.PresetMode.DEFAULT)\n",
         "mono_left.out.link(stereo.left)\n",
         "mono_right.out.link(stereo.right)\n",
+        "\n",
+        "#IMU\n",
+        "imu = pipeline.create(dai.node.IMU)\n",
+        "imu.enableIMUSensor(dai.IMUSensor.GYROSCOPE_RAW, 100)\n",
+        "imu.enableIMUSensor(dai.IMUSensor.ACCELEROMETER_RAW, 100)\n",
+        "imu_queue = pipeline.create(dai.node.XLinkOut)\n",
+        "imu_queue.setStreamName(\"imu\")\n",
+        "imu.out.link(imu_queue.input)\n",
         "\n",
         "xout_rgb = pipeline.create(dai.node.XLinkOut)\n",
         "xout_rgb.setStreamName(\"rgb\")\n",
@@ -1312,96 +1371,103 @@
         "stereo.depth.link(xout_depth.input)\n",
         "\n",
         "frame_queue = queue.Queue(maxsize=1)\n",
-        "object_history = {}  # Stores past positions & timestamps per track ID\n",
         "\n",
-        "def calculate_velocity(current, previous):\n",
-        "    if not previous:\n",
-        "        return 0, 0\n",
-        "    delta_time = current[\"time\"] - previous[\"time\"]\n",
-        "    if delta_time <= 0:\n",
-        "        return 0, 0\n",
-        "    velocity_x = (current[\"x\"] - previous[\"x\"]) / delta_time\n",
-        "    velocity_y = (current[\"y\"] - previous[\"y\"]) / delta_time\n",
-        "    return velocity_x, velocity_y\n",
+        "trackers = {}\n",
+        "\n",
         "\n",
         "def frame_capture_thread():\n",
         "    with dai.Device(pipeline) as device:\n",
         "        video_queue = device.getOutputQueue(name=\"rgb\", maxSize=1, blocking=False)\n",
         "        depth_queue = device.getOutputQueue(name=\"depth\", maxSize=1, blocking=False)\n",
+        "        imu_queue = device.getOutputQueue(name=\"imu\", maxSize=1, blocking=False)\n",
         "        while True:\n",
         "            try:\n",
         "                frame = video_queue.get().getCvFrame()\n",
         "                depth = depth_queue.get().getCvFrame()\n",
-        "                frame_queue.put((frame, depth))\n",
+        "                imu = imu_queue.get()\n",
+        "                frame_queue.put((frame, depth, imu))\n",
         "            except KeyboardInterrupt:\n",
         "                break\n",
         "\n",
+        "kf = KalmanFilter()\n",
+        "# Global video writer\n",
+        "fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
+        "video_writer = cv2.VideoWriter('output.avi', fourcc, 30.0, (640, 360))\n",
+        "\n",
+        "\n",
         "def detection_and_control_thread():\n",
-        "    global object_history\n",
+        "    alpha = 0.4  # Unused here but keep if you apply smoothing later\n",
         "\n",
         "    while True:\n",
         "        try:\n",
         "            if not frame_queue.empty():\n",
-        "                frame, depth = frame_queue.get()\n",
+        "                frame, depth, imu = frame_queue.get()\n",
         "                results = model.track(frame, persist=True)\n",
         "                current_time = time.time()\n",
+        "                found_mock_weed = False\n",
         "\n",
-        "                found_mock_weed = False  # 🔸 ADD THIS LINE\n",
+        "                imu_packets = imu.packets\n",
+        "                tilt_x, tilt_y = 0, 0\n",
+        "\n",
+        "                for imu_packet in imu_packets:\n",
+        "                    accel_data = imu_packet.acceleroMeter\n",
+        "                    accel_x = accel_data.x\n",
+        "                    accel_y = accel_data.y\n",
+        "                    accel_z = accel_data.z\n",
+        "                    tilt_x, tilt_y = calculate_tilt(accel_x, accel_y, accel_z)\n",
         "\n",
         "                for result in results:\n",
         "                    if result.boxes is not None and len(result.boxes) > 0:\n",
         "                        boxes = result.boxes.xyxy.cpu().numpy()\n",
         "                        track_ids = result.boxes.id.int().cpu().tolist() if result.boxes.id is not None else []\n",
-        "                        confidences = result.boxes.conf.cpu().numpy()\n",
         "                        labels = result.boxes.cls.cpu().numpy()\n",
         "\n",
         "                        for i, box in enumerate(boxes):\n",
         "                            label = labels[i]\n",
+        "                            label_name = result.names[int(label)]\n",
         "                            track_id = track_ids[i] if i < len(track_ids) else None\n",
         "                            if track_id is None:\n",
         "                                continue\n",
         "\n",
-        "                            if result.names[int(label)] != \"mock_weed\":\n",
-        "                                continue\n",
-        "\n",
-        "                            found_mock_weed = True  # 🔸 SET FLAG WHEN MOCK_WEED IS FOUND\n",
-        "\n",
         "                            x1, y1, x2, y2 = box\n",
         "                            center_x = (x1 + x2) / 2\n",
         "                            center_y = (y1 + y2) / 2\n",
-        "                            radius = int(((x2 - x1) + (y2 - y1)) / 4)\n",
         "\n",
-        "                            depth_at_center = np.mean(depth[int(y1):int(y2), int(x1):int(x2)]) if depth is not None else 0\n",
         "\n",
-        "                            current = {\"x\": center_x, \"y\": center_y, \"depth\": depth_at_center, \"time\": current_time}\n",
-        "                            previous = object_history.get(track_id)\n",
-        "                            velocity_x, velocity_y = calculate_velocity(current, previous)\n",
-        "                            object_history[track_id] = current\n",
+        "                            if label_name == \"crop\":\n",
+        "                                cv2.circle(frame, (int(center_x), int(center_y)), 40, (0, 255, 0), 2)\n",
         "\n",
-        "                            predicted_x = center_x + velocity_x * 0.5\n",
-        "                            predicted_y = center_y + velocity_y * 0.5\n",
+        "                            elif label_name == \"mock_weed\":\n",
+        "                                found_mock_weed = True\n",
         "\n",
-        "                            cv2.circle(frame, (int(center_x), int(center_y)), 20, (0, 255, 0), 2)\n",
-        "                            cv2.circle(frame, (int(center_x), int(predicted_y)), 10, (255, 0, 0), 2)\n",
+        "                                # Kalman filter prediction and correction\n",
+        "                                kf.predict(center_x, center_y)\n",
+        "                                predicted_X, predicted_y = kf.predict_future(steps=5)\n",
         "\n",
-        "                            if predicted_y > frame.shape[0] // 2:\n",
-        "                                input_data = np.array([[center_x, predicted_y, depth_at_center]])\n",
-        "                                angle_x_long, angle_y_long = rf_model_long.predict(input_data).flatten()\n",
-        "                                angle_x_flat, angle_y_flat = rf_model_flat.predict(input_data).flatten()\n",
         "\n",
-        "                                set_pwm(15, angle_to_pulse_width(round(angle_x_long)))\n",
-        "                                set_pwm(14, angle_to_pulse_width(round(angle_y_long)))\n",
-        "                                set_pwm(11, angle_to_pulse_width(round(angle_x_flat)))\n",
-        "                                set_pwm(10, angle_to_pulse_width(round(angle_y_flat)))\n",
-        "                                control_diode(True)\n",
-        "                            else:\n",
-        "                                control_diode(False)\n",
+        "                                depth_at_center = np.mean(depth)\n",
         "\n",
-        "                # 🔸 TURN OFF DIODE IF NO MOCK_WEED WAS DETECTED\n",
+        "                                cv2.circle(frame, (int(center_x), int(center_y)), 20, (0, 0, 255), 2)\n",
+        "                                cv2.circle(frame, (int(center_x), int(predicted_y)), 10, (0, 0, 255), 2)\n",
+        "\n",
+        "                                if predicted_y > frame.shape[0] // 2:\n",
+        "                                    input_data = np.array([[center_x, predicted_y, depth_at_center, tilt_x, tilt_y]])\n",
+        "                                    angle_x_long, angle_y_long = rf_model_long.predict(input_data).flatten()\n",
+        "                                    angle_x_flat, angle_y_flat = rf_model_flat.predict(input_data).flatten()\n",
+        "\n",
+        "                                    set_pwm(15, angle_to_pulse_width(round(angle_x_long)))\n",
+        "                                    set_pwm(14, angle_to_pulse_width(round(angle_y_long)))\n",
+        "                                    set_pwm(11, angle_to_pulse_width(round(angle_x_flat)))\n",
+        "                                    set_pwm(10, angle_to_pulse_width(round(angle_y_flat)))\n",
+        "                                    control_diode(True)\n",
+        "                                else:\n",
+        "                                    control_diode(False)\n",
+        "\n",
         "                if not found_mock_weed:\n",
         "                    control_diode(False)\n",
         "\n",
         "                cv2.imshow(\"Detection Output\", frame)\n",
+        "                video_writer.write(frame)\n",
         "                if cv2.waitKey(1) == ord(\"q\"):\n",
         "                    break\n",
         "        except KeyboardInterrupt:\n",
@@ -1417,6 +1483,7 @@
         "    while True:\n",
         "        time.sleep(1)\n",
         "except KeyboardInterrupt:\n",
+        "    video_writer.release()\n",
         "    cv2.destroyAllWindows()"
       ],
       "metadata": {
