--- a/Clementine_Ag_W_A_S_P_Setup.ipynb
+++ b/Clementine_Ag_W_A_S_P_Setup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMHvdyxa8XwTQ8tYZhys8+F",
+      "authorship_tag": "ABX9TyMwRDtn+q22JKCQOJW8n/gg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1252,33 +1252,33 @@
         "\n",
         "class KalmanFilter:\n",
         "    def __init__(self):\n",
-        "        # Define the Kalman filter\n",
         "        self.dt = 1.0\n",
-        "\n",
         "        self.A = np.array([[1, 0, self.dt, 0],\n",
         "                           [0, 1, 0, self.dt],\n",
         "                           [0, 0, 1, 0],\n",
         "                           [0, 0, 0, 1]])\n",
-        "\n",
-        "        self.B = np.array([[0],\n",
-        "                           [0],\n",
-        "                           [0],\n",
-        "                           [0]])\n",
-        "\n",
+        "        self.B = np.array([[0], [0], [0], [0]])\n",
         "        self.H = np.array([[1, 0, 0, 0],\n",
         "                           [0, 1, 0, 0]])\n",
-        "\n",
         "        self.Q = np.eye(4) * 0.1\n",
         "        self.R = np.eye(2) * 10\n",
         "        self.P = np.eye(4)\n",
         "        self.x = np.zeros((4, 1))\n",
         "        self.u = 0\n",
+        "        self.initialized = False  # NEW\n",
+        "\n",
+        "    def initialize(self, coordX, coordY):\n",
+        "        self.x = np.array([[coordX], [coordY], [0], [0]])\n",
+        "        self.initialized = True\n",
         "\n",
         "    def predict(self, coordX, coordY):\n",
+        "        if not self.initialized:\n",
+        "            self.initialize(coordX, coordY)\n",
+        "            return int(coordX), int(coordY)\n",
+        "\n",
         "        measured = np.array([[np.float32(coordX)], [np.float32(coordY)]])\n",
         "        self.x = self.A @ self.x + self.B * self.u\n",
         "        self.P = self.A @ self.P @ self.A.T + self.Q\n",
-        "\n",
         "        S = self.H @ self.P @ self.H.T + self.R\n",
         "        K = self.P @ self.H.T @ np.linalg.inv(S)\n",
         "        y = measured - self.H @ self.x\n",
@@ -1287,11 +1287,12 @@
         "        return int(self.x[0][0]), int(self.x[1][0])\n",
         "\n",
         "    def predict_future(self, steps=5):\n",
+        "        if not self.initialized:\n",
+        "            return 0, 0\n",
         "        future_x = self.x.copy()\n",
         "        for _ in range(steps):\n",
         "            future_x = self.A @ future_x + self.B * self.u\n",
         "        return int(future_x[0][0]), int(future_x[1][0])\n",
-        "\n",
         "\n",
         "# Constants for PCA9685\n",
         "PCA9685_ADDRESS = 0x40\n",
@@ -1332,7 +1333,7 @@
         "\n",
         "init_pca9685()\n",
         "\n",
-        "# OAK-D Lite pipeline setup\n",
+        "# Setup OAK-D Lite pipeline\n",
         "pipeline = dai.Pipeline()\n",
         "cam_rgb = pipeline.create(dai.node.ColorCamera)\n",
         "cam_rgb.setPreviewSize(640, 360)\n",
@@ -1354,14 +1355,6 @@
         "mono_left.out.link(stereo.left)\n",
         "mono_right.out.link(stereo.right)\n",
         "\n",
-        "#IMU\n",
-        "imu = pipeline.create(dai.node.IMU)\n",
-        "imu.enableIMUSensor(dai.IMUSensor.GYROSCOPE_RAW, 100)\n",
-        "imu.enableIMUSensor(dai.IMUSensor.ACCELEROMETER_RAW, 100)\n",
-        "imu_queue = pipeline.create(dai.node.XLinkOut)\n",
-        "imu_queue.setStreamName(\"imu\")\n",
-        "imu.out.link(imu_queue.input)\n",
-        "\n",
         "xout_rgb = pipeline.create(dai.node.XLinkOut)\n",
         "xout_rgb.setStreamName(\"rgb\")\n",
         "cam_rgb.preview.link(xout_rgb.input)\n",
@@ -1369,6 +1362,14 @@
         "xout_depth = pipeline.create(dai.node.XLinkOut)\n",
         "xout_depth.setStreamName(\"depth\")\n",
         "stereo.depth.link(xout_depth.input)\n",
+        "\n",
+        "#IMU\n",
+        "imu = pipeline.create(dai.node.IMU)\n",
+        "imu.enableIMUSensor(dai.IMUSensor.GYROSCOPE_RAW, 100)\n",
+        "imu.enableIMUSensor(dai.IMUSensor.ACCELEROMETER_RAW, 100)\n",
+        "imu_queue = pipeline.create(dai.node.XLinkOut)\n",
+        "imu_queue.setStreamName(\"imu\")\n",
+        "imu.out.link(imu_queue.input)\n",
         "\n",
         "frame_queue = queue.Queue(maxsize=1)\n",
         "\n",
@@ -1409,6 +1410,7 @@
         "                imu_packets = imu.packets\n",
         "                tilt_x, tilt_y = 0, 0\n",
         "\n",
+        "\n",
         "                for imu_packet in imu_packets:\n",
         "                    accel_data = imu_packet.acceleroMeter\n",
         "                    accel_x = accel_data.x\n",
@@ -1440,6 +1442,11 @@
         "                            elif label_name == \"mock_weed\":\n",
         "                                found_mock_weed = True\n",
         "\n",
+        "                                # Use Kalman filter per track_id\n",
+        "                                if track_id not in trackers:\n",
+        "                                    trackers[track_id] = KalmanFilter()\n",
+        "\n",
+        "                                kf = trackers[track_id]\n",
         "                                # Kalman filter prediction and correction\n",
         "                                kf.predict(center_x, center_y)\n",
         "                                predicted_X, predicted_y = kf.predict_future(steps=5)\n",
@@ -1450,7 +1457,8 @@
         "                                cv2.circle(frame, (int(center_x), int(center_y)), 20, (0, 0, 255), 2)\n",
         "                                cv2.circle(frame, (int(center_x), int(predicted_y)), 10, (0, 0, 255), 2)\n",
         "\n",
-        "                                if predicted_y > frame.shape[0] // 2:\n",
+        "                                # Strategy: only engage with the weed that's closest to the bottom of the frame\n",
+        "                                if predicted_y > frame.shape[0] * 0.5:\n",
         "                                    input_data = np.array([[center_x, predicted_y, depth_at_center, tilt_x, tilt_y]])\n",
         "                                    angle_x_long, angle_y_long = rf_model_long.predict(input_data).flatten()\n",
         "                                    angle_x_flat, angle_y_flat = rf_model_flat.predict(input_data).flatten()\n",
@@ -1460,6 +1468,7 @@
         "                                    set_pwm(11, angle_to_pulse_width(round(angle_x_flat)))\n",
         "                                    set_pwm(10, angle_to_pulse_width(round(angle_y_flat)))\n",
         "                                    control_diode(True)\n",
+        "                                    break  # stop after controlling the first valid one\n",
         "                                else:\n",
         "                                    control_diode(False)\n",
         "\n",
@@ -1481,13 +1490,44 @@
         "# Keep main thread alive\n",
         "try:\n",
         "    while True:\n",
-        "        time.sleep(1)\n",
+        "        time.sleep(0.1)\n",
         "except KeyboardInterrupt:\n",
         "    video_writer.release()\n",
         "    cv2.destroyAllWindows()"
       ],
       "metadata": {
         "id": "it-o08R-Igni"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To increase the inference speed of the Yolo11n ultralytics model run the following two lines on the Jetson ON:"
+      ],
+      "metadata": {
+        "id": "YFV7GoThlkq1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo nvpmodel -m 0"
+      ],
+      "metadata": {
+        "id": "hiLTERkUluKc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo jetson_clocks"
+      ],
+      "metadata": {
+        "id": "MxUgTm6glwq4"
       },
       "execution_count": null,
       "outputs": []
