--- a/Clementine_Ag_W_A_S_P_Setup.ipynb
+++ b/Clementine_Ag_W_A_S_P_Setup.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwRDtn+q22JKCQOJW8n/gg",
+      "gpuType": "A100",
+      "authorship_tag": "ABX9TyP6LPFa/blB9b7oob4ako3i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -425,6 +427,39 @@
       "metadata": {
         "id": "eupLTHgrjDBj"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install ultralytics"
+      ],
+      "metadata": {
+        "id": "uSWYGGvvxNxl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install numpy==1.23.5"
+      ],
+      "metadata": {
+        "id": "eQ95H5ODxRhe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /content/"
+      ],
+      "metadata": {
+        "id": "QhfsBjSfxUeK"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
