--- a/Clementine_Ag_W_A_S_P_Setup.ipynb
+++ b/Clementine_Ag_W_A_S_P_Setup.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "A100",
-      "authorship_tag": "ABX9TyP6LPFa/blB9b7oob4ako3i",
+      "authorship_tag": "ABX9TyPWZQ5JfyOTuzd4iBC45q7X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -871,13 +871,13 @@
         "from google.colab import files\n",
         "\n",
         "# Load CSV\n",
-        "csv_filename = \"/content/mlp_training_data_flat_cleaned.csv\"\n",
+        "csv_filename = \"/content/RF_Data_Arm3_cleaned.csv\"\n",
         "df = pd.read_csv(csv_filename, header=None)\n",
-        "df.columns = [\"angle_0\", \"angle_1\", \"depth\", \"center_x\", \"center_y\", \"tilt_x\", \"tilt_y\"]\n",
+        "df.columns = [\"angle_x\", \"angle_y\", \"pixel_x\", \"pixel_y\", \"depth\", \"pitch\", \"roll\"]\n",
         "\n",
         "# Features and targets\n",
-        "y = df[[\"angle_0\", \"angle_1\"]].values\n",
-        "x = df[[\"center_x\", \"center_y\", \"depth\", \"tilt_x\", \"tilt_y\"]].values\n",
+        "y = df[[\"angle_x\", \"angle_y\"]].values\n",
+        "x = df[[\"pixel_x\", \"pixel_y\", \"depth\", \"pitch\", \"roll\"]].values\n",
         "\n",
         "# Train/test split\n",
         "X_train, X_val, y_train, y_val = train_test_split(x, y, test_size=0.2, random_state=42)\n",
@@ -904,8 +904,8 @@
         "avg_mae_tree = (mae_angle0_tree + mae_angle1_tree) / 2\n",
         "\n",
         "print(f\"\\nDecision Tree Validation MAE:\")\n",
-        "print(f\"  angle_0: {mae_angle0_tree:.2f} degrees\")\n",
-        "print(f\"  angle_1: {mae_angle1_tree:.2f} degrees\")\n",
+        "print(f\"  angle_x: {mae_angle0_tree:.2f} degrees\")\n",
+        "print(f\"  angle_y: {mae_angle1_tree:.2f} degrees\")\n",
         "print(f\"  Average MAE: {avg_mae_tree:.2f} degrees\")\n",
         "\n",
         "# ====== Compare Predictions to Actuals ======\n",
@@ -913,7 +913,7 @@
         "for i in range(10):\n",
         "    predicted = val_preds_tree[i]\n",
         "    actual = y_val[i]\n",
-        "    print(f\"[{i}] Predicted: angle_0 = {predicted[0]:.2f}, angle_1 = {predicted[1]:.2f}  |  Actual: angle_0 = {actual[0]:.2f}, angle_1 = {actual[1]:.2f}\")\n",
+        "    print(f\"[{i}] Predicted: angle_x = {predicted[0]:.2f}, angle_y = {predicted[1]:.2f}  |  Actual: angle_x = {actual[0]:.2f}, angle_y = {actual[1]:.2f}\")\n",
         "\n",
         "\n",
         "# ========== Random Forest Regressor ==========\n",
@@ -938,8 +938,8 @@
         "avg_mae_rf = (mae_angle0_rf + mae_angle1_rf) / 2\n",
         "\n",
         "print(f\"\\nRandom Forest Validation MAE:\")\n",
-        "print(f\"  angle_0: {mae_angle0_rf:.2f} degrees\")\n",
-        "print(f\"  angle_1: {mae_angle1_rf:.2f} degrees\")\n",
+        "print(f\"  angle_x: {mae_angle0_rf:.2f} degrees\")\n",
+        "print(f\"  angle_y: {mae_angle1_rf:.2f} degrees\")\n",
         "print(f\"  Average MAE: {avg_mae_rf:.2f} degrees\")\n",
         "\n",
         "# ====== Compare Predictions to Actuals ======\n",
@@ -947,7 +947,7 @@
         "for i in range(10):\n",
         "    predicted = val_preds_rf[i]\n",
         "    actual = y_val[i]\n",
-        "    print(f\"[{i}] Predicted: angle_0 = {predicted[0]:.2f}, angle_1 = {predicted[1]:.2f}  |  Actual: angle_0 = {actual[0]:.2f}, angle_1 = {actual[1]:.2f}\")\n",
+        "    print(f\"[{i}] Predicted: angle_x = {predicted[0]:.2f}, angle_y = {predicted[1]:.2f}  |  Actual: angle_x = {actual[0]:.2f}, angle_y = {actual[1]:.2f}\")\n",
         "\n"
       ],
       "metadata": {
@@ -1168,19 +1168,19 @@
         "import pandas as pd\n",
         "\n",
         "# Path to your original CSV file\n",
-        "input_csv = \"/content/mlp_training_data_fine_flat.csv\"\n",
+        "input_csv = \"/content/RF_Data_Arm3.csv\"\n",
         "\n",
         "# Output path for cleaned CSV\n",
-        "output_csv = \"/content/mlp_training_data_flat_cleaned.csv\"\n",
+        "output_csv = \"/content/RF_Data_Arm3_cleaned.csv\"\n",
         "\n",
         "# Load the CSV file (no header)\n",
         "df = pd.read_csv(input_csv, header=None)\n",
         "\n",
         "# Set column names\n",
-        "df.columns = [\"angle_0\", \"angle_1\", \"depth\", \"center_x\", \"center_y\", \"tiltx\", \"tilty\"]\n",
+        "df.columns = [\"angle_x\", \"angle_y\", \"pixel_x\", \"pixel_y\", \"depth\", \"pitch\", \"roll\"]\n",
         "\n",
         "# Drop rows with NaNs in input or target columns\n",
-        "df_cleaned = df.dropna(subset=[\"angle_0\", \"angle_1\", \"center_x\", \"center_y\", \"depth\"])\n",
+        "df_cleaned = df.dropna(subset=[\"angle_x\", \"angle_y\", \"pixel_x\", \"pixel_y\", \"depth\", \"pitch\", \"roll\"])\n",
         "\n",
         "# Save the cleaned DataFrame to a new CSV\n",
         "df_cleaned.to_csv(output_csv, index=False, header=False)\n",
@@ -1193,16 +1193,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d5a58c98-a34f-40ef-8db1-9166ecda0fc8"
+        "outputId": "04494dd4-a234-4226-fb9b-8bbc7497c5a2"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cleaned dataset saved to: /content/mlp_training_data_flat_cleaned.csv\n",
-            "Original rows: 46129, Cleaned rows: 46078\n"
+            "Cleaned dataset saved to: /content/RF_Data_Arm3_cleaned.csv\n",
+            "Original rows: 3467, Cleaned rows: 3464\n"
           ]
         }
       ]
