--- a/Clementine_Ag_W_A_S_P_Setup.ipynb
+++ b/Clementine_Ag_W_A_S_P_Setup.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "A100",
-      "authorship_tag": "ABX9TyPWZQ5JfyOTuzd4iBC45q7X",
+      "authorship_tag": "ABX9TyNrFZ4cBOdwjWR+zl32iIrx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -871,8 +871,8 @@
         "from google.colab import files\n",
         "\n",
         "# Load CSV\n",
-        "csv_filename = \"/content/RF_Data_Arm3_cleaned.csv\"\n",
-        "df = pd.read_csv(csv_filename, header=None)\n",
+        "csv_filename = \"/content/RF_Data_Arm1_cleaned.csv\"\n",
+        "df = pd.read_csv(csv_filename, header=0)\n",
         "df.columns = [\"angle_x\", \"angle_y\", \"pixel_x\", \"pixel_y\", \"depth\", \"pitch\", \"roll\"]\n",
         "\n",
         "# Features and targets\n",
@@ -922,7 +922,7 @@
         "rf.fit(X_train, y_train)\n",
         "\n",
         "# Save the Random Forest model\n",
-        "rf_model_path = \"/content/random_forest_flat_fine2.pkl\"\n",
+        "rf_model_path = \"/content/RF_Arm1.pkl\"\n",
         "with open(rf_model_path, 'wb') as f:\n",
         "    pickle.dump(rf, f)\n",
         "\n",
@@ -956,9 +956,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 642
         },
-        "outputId": "b7640cf1-a6c5-44b2-a207-154f153884de"
+        "outputId": "e8403eac-a817-4f35-a5fb-9921cd292b6e"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1026,7 +1026,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_043548e2-4c57-414a-b900-6869f58e84c4\", \"decision_tree_flat_fine2.pkl\", 5889007)"
+              "download(\"download_dc323e4e-579d-47c7-950d-108d1d6eb883\", \"decision_tree_flat_fine2.pkl\", 491882)"
             ]
           },
           "metadata": {}
@@ -1037,22 +1037,22 @@
           "text": [
             "\n",
             "Decision Tree Validation MAE:\n",
-            "  angle_0: 1.03 degrees\n",
-            "  angle_1: 0.17 degrees\n",
-            "  Average MAE: 0.60 degrees\n",
+            "  angle_x: 1.49 degrees\n",
+            "  angle_y: 0.46 degrees\n",
+            "  Average MAE: 0.98 degrees\n",
             "\n",
             "Sample Predictions vs Actual Values for Decision Tree:\n",
-            "[0] Predicted: angle_0 = 59.00, angle_1 = 28.60  |  Actual: angle_0 = 59.20, angle_1 = 28.60\n",
-            "[1] Predicted: angle_0 = 28.60, angle_1 = 41.60  |  Actual: angle_0 = 28.60, angle_1 = 41.20\n",
-            "[2] Predicted: angle_0 = 48.80, angle_1 = 25.80  |  Actual: angle_0 = 46.80, angle_1 = 26.40\n",
-            "[3] Predicted: angle_0 = 51.40, angle_1 = 27.20  |  Actual: angle_0 = 52.00, angle_1 = 26.80\n",
-            "[4] Predicted: angle_0 = 59.60, angle_1 = 31.40  |  Actual: angle_0 = 59.80, angle_1 = 31.40\n",
-            "[5] Predicted: angle_0 = 49.60, angle_1 = 51.00  |  Actual: angle_0 = 49.40, angle_1 = 51.00\n",
-            "[6] Predicted: angle_0 = 74.20, angle_1 = 35.40  |  Actual: angle_0 = 74.00, angle_1 = 35.40\n",
-            "[7] Predicted: angle_0 = 28.40, angle_1 = 50.00  |  Actual: angle_0 = 28.20, angle_1 = 50.00\n",
-            "[8] Predicted: angle_0 = 51.80, angle_1 = 29.00  |  Actual: angle_0 = 51.80, angle_1 = 28.20\n",
-            "[9] Predicted: angle_0 = 32.60, angle_1 = 47.00  |  Actual: angle_0 = 30.80, angle_1 = 46.80\n",
-            "Random Forest trained and saved to /content/random_forest_flat_fine2.pkl\n"
+            "[0] Predicted: angle_x = 115.00, angle_y = 190.00  |  Actual: angle_x = 113.00, angle_y = 190.00\n",
+            "[1] Predicted: angle_x = 119.00, angle_y = 187.00  |  Actual: angle_x = 118.00, angle_y = 187.00\n",
+            "[2] Predicted: angle_x = 129.00, angle_y = 168.00  |  Actual: angle_x = 130.00, angle_y = 168.00\n",
+            "[3] Predicted: angle_x = 140.00, angle_y = 194.00  |  Actual: angle_x = 141.00, angle_y = 192.00\n",
+            "[4] Predicted: angle_x = 125.00, angle_y = 179.00  |  Actual: angle_x = 127.00, angle_y = 178.00\n",
+            "[5] Predicted: angle_x = 99.00, angle_y = 161.00  |  Actual: angle_x = 103.00, angle_y = 162.00\n",
+            "[6] Predicted: angle_x = 136.00, angle_y = 161.00  |  Actual: angle_x = 139.00, angle_y = 162.00\n",
+            "[7] Predicted: angle_x = 92.00, angle_y = 162.00  |  Actual: angle_x = 94.00, angle_y = 162.00\n",
+            "[8] Predicted: angle_x = 139.00, angle_y = 198.00  |  Actual: angle_x = 136.00, angle_y = 197.00\n",
+            "[9] Predicted: angle_x = 70.00, angle_y = 168.00  |  Actual: angle_x = 71.00, angle_y = 168.00\n",
+            "Random Forest trained and saved to /content/RF_Arm1.pkl\n"
           ]
         },
         {
@@ -1114,7 +1114,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_b580c1ec-169e-400b-a095-f03f857cf408\", \"random_forest_flat_fine2.pkl\", 372675891)"
+              "download(\"download_3731f8f6-987d-419c-a1be-2bd0554e6c87\", \"RF_Arm1.pkl\", 31030672)"
             ]
           },
           "metadata": {}
@@ -1125,21 +1125,21 @@
           "text": [
             "\n",
             "Random Forest Validation MAE:\n",
-            "  angle_0: 0.92 degrees\n",
-            "  angle_1: 0.13 degrees\n",
-            "  Average MAE: 0.52 degrees\n",
+            "  angle_x: 1.12 degrees\n",
+            "  angle_y: 0.25 degrees\n",
+            "  Average MAE: 0.69 degrees\n",
             "\n",
             "Sample Predictions vs Actual Values for Random Forest:\n",
-            "[0] Predicted: angle_0 = 57.99, angle_1 = 28.70  |  Actual: angle_0 = 59.20, angle_1 = 28.60\n",
-            "[1] Predicted: angle_0 = 28.70, angle_1 = 41.39  |  Actual: angle_0 = 28.60, angle_1 = 41.20\n",
-            "[2] Predicted: angle_0 = 48.98, angle_1 = 26.24  |  Actual: angle_0 = 46.80, angle_1 = 26.40\n",
-            "[3] Predicted: angle_0 = 52.68, angle_1 = 26.78  |  Actual: angle_0 = 52.00, angle_1 = 26.80\n",
-            "[4] Predicted: angle_0 = 59.51, angle_1 = 31.31  |  Actual: angle_0 = 59.80, angle_1 = 31.40\n",
-            "[5] Predicted: angle_0 = 48.73, angle_1 = 51.05  |  Actual: angle_0 = 49.40, angle_1 = 51.00\n",
-            "[6] Predicted: angle_0 = 73.95, angle_1 = 35.54  |  Actual: angle_0 = 74.00, angle_1 = 35.40\n",
-            "[7] Predicted: angle_0 = 28.52, angle_1 = 50.05  |  Actual: angle_0 = 28.20, angle_1 = 50.00\n",
-            "[8] Predicted: angle_0 = 51.42, angle_1 = 28.23  |  Actual: angle_0 = 51.80, angle_1 = 28.20\n",
-            "[9] Predicted: angle_0 = 32.36, angle_1 = 46.90  |  Actual: angle_0 = 30.80, angle_1 = 46.80\n"
+            "[0] Predicted: angle_x = 112.57, angle_y = 189.70  |  Actual: angle_x = 113.00, angle_y = 190.00\n",
+            "[1] Predicted: angle_x = 119.33, angle_y = 187.20  |  Actual: angle_x = 118.00, angle_y = 187.00\n",
+            "[2] Predicted: angle_x = 128.26, angle_y = 168.23  |  Actual: angle_x = 130.00, angle_y = 168.00\n",
+            "[3] Predicted: angle_x = 140.67, angle_y = 192.53  |  Actual: angle_x = 141.00, angle_y = 192.00\n",
+            "[4] Predicted: angle_x = 126.54, angle_y = 178.20  |  Actual: angle_x = 127.00, angle_y = 178.00\n",
+            "[5] Predicted: angle_x = 99.86, angle_y = 161.49  |  Actual: angle_x = 103.00, angle_y = 162.00\n",
+            "[6] Predicted: angle_x = 137.12, angle_y = 161.79  |  Actual: angle_x = 139.00, angle_y = 162.00\n",
+            "[7] Predicted: angle_x = 92.76, angle_y = 161.58  |  Actual: angle_x = 94.00, angle_y = 162.00\n",
+            "[8] Predicted: angle_x = 138.37, angle_y = 197.22  |  Actual: angle_x = 136.00, angle_y = 197.00\n",
+            "[9] Predicted: angle_x = 69.30, angle_y = 167.91  |  Actual: angle_x = 71.00, angle_y = 168.00\n"
           ]
         }
       ]
@@ -1168,10 +1168,10 @@
         "import pandas as pd\n",
         "\n",
         "# Path to your original CSV file\n",
-        "input_csv = \"/content/RF_Data_Arm3.csv\"\n",
+        "input_csv = \"/content/RF_Data_Arm1.csv\"\n",
         "\n",
         "# Output path for cleaned CSV\n",
-        "output_csv = \"/content/RF_Data_Arm3_cleaned.csv\"\n",
+        "output_csv = \"/content/RF_Data_Arm1_cleaned.csv\"\n",
         "\n",
         "# Load the CSV file (no header)\n",
         "df = pd.read_csv(input_csv, header=None)\n",
@@ -1193,7 +1193,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "04494dd4-a234-4226-fb9b-8bbc7497c5a2"
+        "outputId": "9b0ec9c9-141d-4b3c-aa49-eb6860b37371"
       },
       "execution_count": 1,
       "outputs": [
@@ -1201,8 +1201,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cleaned dataset saved to: /content/RF_Data_Arm3_cleaned.csv\n",
-            "Original rows: 3467, Cleaned rows: 3464\n"
+            "Cleaned dataset saved to: /content/RF_Data_Arm1_cleaned.csv\n",
+            "Original rows: 3837, Cleaned rows: 3836\n"
           ]
         }
       ]
