--- a/Juniper_Setup/clementine_ag_Juniper_setup.ipynb
+++ b/Juniper_Setup/clementine_ag_Juniper_setup.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "L4",
-      "authorship_tag": "ABX9TyOwU7Xr3ELy5C+lC24C8nNV",
+      "authorship_tag": "ABX9TyMwZPM0G/2MSBZ30gqMrdIV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,11 +50,11 @@
       "source": [
         "First, run the following commands on the Jetson orin nano after initial boot into Jetpack 6.2 in order have all the packages run properly. These setup commands can be found in the following links as well:\n",
         "\n",
-        "* https://www.stereolabs.com/docs/development/zed-sdk/jetson\n",
         "* https://docs.ultralytics.com/guides/nvidia-jetson/#install-ultralytics-package\n",
         "* https://docs.ultralytics.com/modes/train/#apple-silicon-mps-training\n",
         "* https://www.youtube.com/watch?v=7P6I2jeJNYo  (CH340 Kernel build)\n",
-        "* https://www.youtube.com/watch?v=OYrSADrtSag&t=177s   (NoMachine setup)\n"
+        "* https://www.youtube.com/watch?v=OYrSADrtSag&t=177s   (NoMachine setup)\n",
+        "* https://www.stereolabs.com/en-ca/developers/drivers  (ZED Link Mono install)\n"
       ],
       "metadata": {
         "id": "afqB6KCVc6sb"
